Improve styling of code blocks

--- a/post/2023/02/06/bootable-usb.page
+++ b/post/2023/02/06/bootable-usb.page
@@ -18,69 +18,68 @@ content: |
     <ol>
       <li><p>Boot into an Ubuntu live USB and connect the external hard drive.</p></li>
       <li>
-        <p>List partitions of all devices:</p>
-        <pre><code>lsblk</code></pre>
+        <p>List partitions of all devices: <code class="inline">lsblk</code></p>
       </li>
       <li>
-        <p>From the results of <code>lsblk</code>, identify the linux partition and also the efi partition of the external hard drive,
-           i.e. <code>/dev/sdXY1</code> and <code>/dev/sdXY2</code> respectively. Replace <code>XY1</code> and <code>XY2</code> with your own partition names.</p>
+        <p>From the results of <code class="inline">lsblk</code>, identify the linux partition and also the efi partition of the external hard drive,
+           i.e. <code class="inline">/dev/sdXY1</code> and <code class="inline">/dev/sdXY2</code> respectively. Replace <code class="inline">XY1</code> and <code class="inline">XY2</code> with your own partition names.</p>
       </li>
       <li>
         <p>Special mount the linux partition:</p>
-        <pre><code>sudo mount /dev/sdXY1 /mnt</code></pre>
+        <code><pre>sudo mount /dev/sdXY1 /mnt</pre></code>
       </li>
       <li>
         <p>Mount critical virtual filesystems:</p>
-        <pre><code>for i in /dev /dev/pts /proc /sys /run; do sudo mount -B $i /mnt$i; done</code></pre>
+        <code><pre>for i in /dev /dev/pts /proc /sys /run; do sudo mount -B $i /mnt$i; done</pre></code>
       </li>
       <li>
-        <p><code>chroot</code> into the Linux partition you mounted:</p>
-        <pre><code>sudo chroot /mnt</code></pre>
+        <p><code class="inline">chroot</code> into the Linux partition you mounted:</p>
+        <code><pre>sudo chroot /mnt</pre></code>
         <p>You are now in the external hard drive's linux filesystem.</p>
       </li>
       <li>
         <p>Create the directory where grub would install its files:</p>
-        <pre><code>mkdir -p /boot/efi</code></pre>
+        <code><pre>mkdir -p /boot/efi</pre></code>
         <p>If it already exists, then skip to step 8.</p>
       </li>
       <li>
         <p>Mount the efi partition from step 3:</p>
-        <pre><code>mount /dev/sdXY2 /boot/efi</code></pre>
+        <code><pre>mount /dev/sdXY2 /boot/efi</pre></code>
       </li>
       <li>
         <p>Install grub to the external hard drive:</p>
-        <pre><code>grub-install /dev/sdX</code></pre>
+        <code><pre>grub-install /dev/sdX</pre></code>
       </li>
       <li>
         <p>Update grub:</p>
-        <pre><code>update-grub</code></pre>
+        <code><pre>update-grub</pre></code>
       </li>
       <li>
         <p>Find the UUID of the efi partition (aka 'vfat') and note it down:</p>
-        <pre><code>blkid</code></pre>
+        <code><pre>blkid</pre></code>
         <p>or</p>
-        <pre><code>ls -l /dev/disk/by-uuid</code></pre>
+        <code><pre>ls -l /dev/disk/by-uuid</pre></code>
       </li>
       <li>
         <p>Now we need to tell fstab to mount that efi partition on boot:</p>
-        <pre><code>
+        <code><pre>
           cp /etc/fstab /etc/fstab.bak
           sudo nano /etc/fstab  
-        </code></pre>
+        </pre></code>
         <p>Add the below two lines to fstab replacing xxxx-xxxx with the UUID from step 11:</p>
-        <pre><code>
+        <code><pre>
           #my modified fstab to mount external hard drive's esp  
           UUID=xxxx-xxxx   /boot/efi   vfat   umask=0077   0   1  
-        </code></pre>
+        </pre></code>
         <p>Make sure to comment out the fstab entry of the Windows esp so it doesn't conflict.</p>
       </li>
       <li>
         <p>Exit the chroot:</p>
-        <pre><code>exit</code></pre>
+        <code><pre>exit</pre></code>
       </li>
       <li>
         <p>Reboot the PC:</p>
-        <pre><code>sudo reboot</code></pre>
+        <code><pre>sudo reboot</pre></code>
       </li>
     </ol>
     <p>At this point when you reboot and choose your external device from the EFI boot manager, it will boot to grub.</p>
@@ -101,18 +100,18 @@ content: |
       <li><p>Move it to the top of the boot entries list</p></li>
       <li><p>Restart</p></li>
     </ol>
-    <p><strong>Alternative #2</strong> – using <code>efibootmgr</code></p>
+    <p><strong>Alternative #2</strong> – using <code class="inline">efibootmgr</code></p>
     <ol>
       <li>
         <p>List boot menu entries:</p>
-        <pre><code>efibootmgr</code></pre>
+        <code><pre>efibootmgr</pre></code>
       </li>
       <li>
         <p>Create a boot entry:</p>
-        <pre><code>efibootmgr -c [-L label] [-d /dev/sdX]</code></pre>
+        <code><pre>efibootmgr -c [-L label] [-d /dev/sdX]</pre></code>
         <p>e.g.: <code>efibootmgr -c -L myubuntu -d /dev/sdX</code></p>
         <p>This boot entry would automatically be the first entry.</p>
-        <p><code>/dev/sdX</code> is the external hard drive with the grub bootloader.</p>
+        <p><code class="inline">/dev/sdX</code> is the external hard drive with the grub bootloader.</p>
       </li>
       <li>
         <p>You can now reboot and without your intervention Ubuntu would automatically boot when external hard drive is plugged in. When the external hard drive is not plugged in, the PC would skip
