--- a/public/style.css
+++ b/public/style.css
@@ -40,20 +40,38 @@ main {
   }
 }
 
-code.utf-desc {
+code {
   font-family: 'Fira Code', monospace;
   font-size: 14.4px;
   background-color: #121212;
-  padding: 1em;
-  display: block;
+  padding: 4px;
   border-radius: 8px;
+  display: block;
+  margin-block: 16px;
 }
 
-code.utf-desc pre {
+code.inline {
+  display: inline-block;
+  margin-block: 0;
+}
+
+code pre {
   white-space: pre-line;
-  margin-block: 5px;
+  margin: 4px;
 }
 
 a {
   color: tomato;
+}
+
+h1 {
+  color: tomato;
+}
+
+h2 {
+  color: lightseagreen;
+}
+
+h3 {
+  color: orchid;
 }
